--- a/style.css
+++ b/style.css
@@ -1,23 +1,37 @@
 * {
   font-family: "Roboto", sans-serif;
   color: #4b4e6d;
+  /* border: solid #4b4e6d 2px; */
 }
 
 body {
   background-color: #f3e8ee;
+  margin: 2em 10em 2em 10em;
+}
+
+body {
+}
+
+#main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 #title {
-  margin: 2em 10em 2em 10em;
-  display: flex;
-  justify-content: center;
+  font-size: 100px;
 }
 h1 {
-  font-weight: bolder;
-  font-size: 200px;
+  margin: 0;
 }
 
 #container {
   display: flex;
-  justify-content: center;
-  border: solid #4b4e6d;
+  border: solid #4b4e6d 5px;
+  border-radius: 12px;
+  flex-wrap: wrap;
+  padding: 5px;
+  min-width: 500px;
+  max-width: 500px;
+  max-height: 500px;
+  min-height: 500px;
 }
