--- a/style.css
+++ b/style.css
@@ -35,3 +35,23 @@ h1 {
   max-height: 500px;
   min-height: 500px;
 }
+#content {
+  display: flex;
+  align-items: center;
+  /* border: #4b4e6d solid; */
+}
+button {
+  border-radius: 12px;
+  border: #4b4e6d solid;
+  background-color: #f3e8ee;
+  padding: 8px;
+  font-size: 24px;
+  height: fit-content;
+  margin-right: 64px;
+}
+
+.options {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
